--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -83,6 +83,7 @@
     "react/prop-types": "off",
     "import/no-extraneous-dependencies": "off",
     "no-nested-ternary": "off",
+    "no-console": ["error", { "allow": ["warn", "error"] }],
     "react/jsx-props-no-spreading": "off"
   }
 }
