--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@chromatic-com/storybook": "1.9.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.0",
+    "@storybook/addon-essentials": "8.3.4",
+    "@storybook/addon-interactions": "8.3.4",
+    "@storybook/addon-links": "8.3.4",
+    "@storybook/addon-onboarding": "8.3.4",
+    "@storybook/addon-webpack5-compiler-swc": "1.0.5",
+    "@storybook/blocks": "8.3.4",
+    "@storybook/react": "8.3.4",
+    "@storybook/react-webpack5": "8.3.4",
+    "@storybook/test": "8.3.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
@@ -29,6 +39,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.9.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.0.2",
@@ -38,6 +50,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-styles": "^4.0.0",
+    "storybook": "8.3.4",
     "styled-components": "^6.1.13",
     "typescript": "^5.6.2"
   },
@@ -48,10 +61,14 @@
   },
   "scripts": {
     "build-lib": "rollup -c",
-    "prepare": "husky"
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn eslint",
-    "*.{js,jsx,ts,tsx,html,css}": "yarn prettier --check"
+    "*.{js,jsx,ts,tsx,html,css}": "yarn prettier --write"
   }
 }
