init: customize the initial configuration and structure of the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,11 @@
     "isolatedModules": true,
     "baseUrl": "./",
     "paths": {
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@utils/*": ["src/utils/*"],
+      "@types/*": ["src/types/*"],
+      "@styles/*": ["src/styles/*"],
       "@/*": ["src/*"]
     }
   },
