--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-export-default-from": "^7.24.7",
+    "@babel/plugin-proposal-throw-expressions": "^7.24.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@chromatic-com/storybook": "1.9.0",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -52,6 +55,7 @@
     "rollup-plugin-styles": "^4.0.0",
     "storybook": "8.3.4",
     "styled-components": "^6.1.13",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
