feat: implement select date

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,6 +78,7 @@
       }
     ],
     "react/prefer-stateless-function": "off",
+    "@typescript-eslint/no-shadow": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/control-has-associated-label": "off",
     "arrow-body-style": "off",
@@ -85,7 +86,7 @@
     "import/no-extraneous-dependencies": "off",
     "no-nested-ternary": "off",
     "no-plusplus": "off",
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "react/jsx-props-no-spreading": "off"
   }
 }
