--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,6 +78,7 @@
       }
     ],
     "react/prefer-stateless-function": "off",
+    "react/jsx-boolean-value": "off",
     "@typescript-eslint/no-shadow": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/control-has-associated-label": "off",
