--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "datepicker",
+  "homepage": "https://solum-the-creator.github.io/datepicker",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -44,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.9.0",
+    "gh-pages": "^6.1.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.0.2",
@@ -69,7 +71,9 @@
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "predeploy": "yarn build-storybook",
+    "deploy": "gh-pages -d storybook-static"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn eslint",
