--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@storybook/react": "8.3.4",
     "@storybook/react-webpack5": "8.3.4",
     "@storybook/test": "8.3.4",
+    "@testing-library/jest-dom": "^6.6.1",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
@@ -45,6 +49,9 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.9.0",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.0.2",
     "react": "^18.3.1",
@@ -55,6 +62,7 @@
     "rollup-plugin-styles": "^4.0.0",
     "storybook": "8.3.4",
     "styled-components": "^6.1.13",
+    "ts-jest": "^29.2.5",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.2"
   },
@@ -68,6 +76,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prepare": "husky",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
