--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "datepicker",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "@solumzy/datepicker",
+  "version": "1.0.2",
+  "type": "module",
+  "main": "dist/cjs/bundle.js",
+  "module": "dist/esm/bundle.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -12,12 +18,10 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@chromatic-com/storybook": "1.9.0",
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^28.0.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.0",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@storybook/addon-essentials": "8.3.4",
     "@storybook/addon-interactions": "8.3.4",
     "@storybook/addon-links": "8.3.4",
@@ -56,10 +60,11 @@
     "prettier": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rollup": "^4.23.0",
-    "rollup-plugin-dts": "^6.1.1",
+    "rimraf": "^4.4.1",
+    "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-styles": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook": "8.3.4",
     "styled-components": "^6.1.13",
     "ts-jest": "^29.2.5",
@@ -72,7 +77,7 @@
     "styled-components": "^6.1.13"
   },
   "scripts": {
-    "build-lib": "rollup -c",
+    "build-lib": "rimraf dist && rollup -c",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prepare": "husky",
@@ -83,5 +88,6 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn eslint",
     "*.{js,jsx,ts,tsx,html,css}": "yarn prettier --write"
-  }
+  },
+  "dependencies": {}
 }
