feat: update git config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,26 +96,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Cache node modules
-        id: cache-yarn
         uses: actions/cache@v4
-        env:
-          cache-name: cache-node-modules
         with:
-          path: |
-            ~/.yarn
-            node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
-            ${{ runner.os }}-
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "mr.kostukevi4@mail.ru"
+          git config --global user.name "solum-the-creator"
 
       - name: Deploy Storybook to GitHub Pages
         run: yarn deploy
