--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,10 +109,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Configure Git
+      - name: Deploy with gh-pages
         run: |
-          git config --global user.email "mr.kostukevi4@mail.ru"
-          git config --global user.name "solum-the-creator"
-
-      - name: Deploy Storybook to GitHub Pages
-        run: yarn deploy
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          yarn deploy -- -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
